kubernetes/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-order-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: app-microservice
                port:
                  number: 80
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
          - path: /grafana(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
          - path: /photo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: photo-microservice
                port:
                  number: 80
          - path: /minio-console(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-console
                port:
                  number: 9001
